Fixed No-Wrap for Flex

--- a/Stylesheet.css
+++ b/Stylesheet.css
@@ -8,7 +8,7 @@
     
     display: flex;
     justify-content: space-around;
-    flex-wrap: wrap;
+    flex-wrap: nowrap;
     align-content: flex-start;
     column-gap: 3px;
     row-gap: 3px;
@@ -90,7 +90,7 @@ footer{
 width: 100%;
 background-color: rgb(45, 73, 73);
 text-align: center;
-margin-top: 200px;
+margin-top: 300px;
 height: auto;
 padding: 10px;
 
